# webuntis-fetcher-and-reuploader

./: flake.nix  pyproject.toml
tabulator_webuntis_ap/: main.py
